<resources>
    <string name="app_name">weTrade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Lista/Cuadrícula</string>

    <string name="menu_general_settings">Configuracion general</string>

    <string name="menu_config">Configuracion</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_myposts">Mis articulos</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_detail">Detalle</string>
    <string name="menu_invite">Invita</string>
    <string name="menu_signout">Cerrar sesión</string>
    <string name="menu_notifications">Mis notificaciones</string>
    <string name="title_activity_articles_list">ArticlesListActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-8615192906080517/5153080384</string>
    <string name="new_article">Crear</string>
    <string name="open_my_articles">Consultar</string>
    <string name="subscribe_to">Suscribirse</string>
    <string name="cancel">Cancelar</string>
    <string name="mandatory_field">Campo obligatorio</string>
    <string name="buy_notification_title">NOTIFICACION</string>
    <string name="buy_notification_message">Desea comprar el servicio de notificaciones para este mensaje por $2.000 pesos ?</string>
    <string name="buy_notification_buy">Comprar</string>
    <string name="buy_notification_continue">Seguir sin comprar</string>

    <string name="error">Error</string>
    <string name="image_upload_ok">Ok</string>
    <string name="image_upload_message">Debes subir una imagen antes de guardar el articulo.</string>


    <string name="new_article_name">Nombre artículo</string>
    <string name="new_article_description">Descripción</string>
    <string name="new_article_price">Precio</string>
    <string name="new_article_currency">Moneda</string>
    <string name="new_article_charges">Gastos de envío</string>
    <string name="new_article_location">Ubicación</string>

    <string name="invitation_message">Hola, instala weTrade</string>
    <string name="invitation_cta">Llamado a la acción</string>
    <string name="invitation_title">Invitación de weTrade</string>
    <string name="title_mychat_list">MyChats</string>
    <string name="title_mychat_detail">MyChat Detail</string>

    <string name="title_activity_article_detail">ArticleDetailActivity</string>
    <string name="notification_message_1">Hay un nuevo articulo en el tópico</string>
    <string name="notification_message_2"> que te puede interesar !!!</string>

    <string name="article_detail_price_title">Precio: </string>
    <string name="article_detail_currency_title">Moneda: </string>
    <string name="article_detail_shipping_title">Gastos Envio: </string>

</resources>
