<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="co.com.firefly.wetrade.ArticleDetailActivity">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_article_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/detail_article_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_article_image"
                android:maxLines="3"
                android:padding="8dp"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp"/>

            <LinearLayout
                android:id="@+id/priceConteiner"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_below="@+id/detail_article_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/article_detail_currency_title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:id="@+id/detail_article_currency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/article_detail_price_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:id="@+id/detail_article_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/article_detail_shipping_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:id="@+id/detail_article_sending_charges" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceConteiner"
                android:maxLines="3"
                android:padding="8dp"
                android:textColor="#666"
                android:textSize="14dp"
                android:id="@+id/detail_article_description" />

            <Button
                android:layout_below="@+id/detail_article_description"
                android:id="@+id/detail_article_button"
                android:textColor="@color/white"
                android:shadowColor="#666666"
                android:text="@string/menu_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
